# hftx

hftx/exchange-service/: Cargo.toml
hftx/exchange-service/src/: bot_driver.rs  exchange.rs  main.rs  types.rs  websocket.rs
hftx/orderbook/benches/: orderbook_bench.rs
hftx/orderbook/src/: lib.rs  price_levels.rs  types.rs
hftx/src/: latency_test.rs  main.rs
hftx/web/: package.json  pnpm-lock.yaml
hftx/web/components/: SimEngine.tsx
hftx/web/components/sections/: Engine.tsx  Hero.tsx  Ladder.tsx  OrderEntry.tsx  Sim.tsx  TradeTape.tsx
hftx/web/lib/: exchange.ts  store.ts  types.ts
