[package]
name = "exchange-service"
version = "0.1.0"
edition = "2021"

[dependencies]
orderbook = { path = "../orderbook" }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
dashmap = "5.5" 